# LOL

./: .gitignore  CMakeLists.txt  build.sh
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  CODING_RULES.md
src/: main.cpp
src/api/: i_api_handler.hpp  login_handler.cpp  login_handler.hpp  logout_handler.cpp  logout_handler.hpp  static_handler.cpp  static_handler.hpp  stream_handler.cpp  stream_handler.hpp
src/app/: app.cpp  app.hpp  config_manager.cpp  config_manager.hpp  shared_context.hpp
src/auth/: fail_delay.cpp  fail_delay.hpp  password_hasher.cpp  password_hasher.hpp  user_store.cpp  user_store.hpp
src/common/: error.hpp  logger.cpp  logger.hpp
src/http/: async_resp.hpp  request.hpp  response.hpp
src/middleware/: auth_middleware.cpp  auth_middleware.hpp  cors_middleware.cpp  cors_middleware.hpp  csrf_middleware.cpp  csrf_middleware.hpp  i_middleware.hpp  logging_middleware.cpp  logging_middleware.hpp  rate_limit_middleware.cpp  rate_limit_middleware.hpp
src/routing/: router.cpp  router.hpp  trie.cpp  trie.hpp
src/server/: connection.cpp  connection.hpp  http_server.cpp  http_server.hpp
src/session/: session.hpp  session_store.cpp  session_store.hpp  token_generator.cpp  token_generator.hpp
src/streaming/: file_frame_source.cpp  file_frame_source.hpp  i_frame_source.hpp  stream_manager.cpp  stream_manager.hpp  websocket_handler.cpp  websocket_handler.hpp
tests/: conftest.py  pytest.ini  requirements.txt  test_auth.py  test_bruteforce.py  test_middleware.py  test_stream.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: main.js
ui/src/assets/styles/: index.scss  variables.scss
ui/src/components/AppHeader/: AppHeader.vue
ui/src/components/AppNavigation/: AppNavigation.vue
ui/src/layouts/: AppLayout.vue
ui/src/router/: index.js  routes.js
ui/src/store/: index.js
ui/src/store/modules/: authentication.js
ui/src/views/Login/: Login.vue
ui/src/views/Stream/: Stream.vue
